# VERIDIS

./: .env.example  .env.production.example  .gitignore  Caddyfile  README.md  docker-compose.prod.yml  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vercel.json
apps/api/: Dockerfile  README.md  alembic.ini  pyproject.toml  requirements.txt
apps/api/alembic/: env.py
apps/api/src/: celery_app.py  main.py  seed_esrs.py
apps/api/src/models/: __init__.py  abonnement.py  base.py  email_log.py  entities.py
apps/api/src/routers/: analytics.py
apps/api/src/routers/webhooks/: __init__.py  stripe.py
apps/api/src/services/: __init__.py  schemas.py
apps/api/src/services/ai/: __init__.py  openai_client.py
apps/api/src/services/analysis/: __init__.py  engine.py  gap_detector.py  scoring.py
apps/api/src/services/analytics/: __init__.py  alert_engine.py  mrr_calculator.py  schemas.py
apps/api/src/services/billing/: __init__.py  email_templates.py  entitlements.py  repository.py
apps/api/src/services/email/: __init__.py  loops_client.py  resend_client.py  scheduler.py
apps/api/src/services/parsing/: __init__.py  engine.py
apps/api/src/services/pdf_generator/: README.md  __init__.py  renderer.py
apps/api/src/workers/: __init__.py  generate_pdf.py
apps/api/tests/routers/webhooks/: test_stripe_webhook.py
apps/api/tests/seed/: test_esrs_reference.py
apps/api/tests/services/analysis/: test_gap_detector.py  test_scoring.py
apps/api/tests/services/analytics/: test_alert_engine.py  test_mrr_calculator.py
docs/: dba-justification.md  (+5 more)
(+70 files in other folders)
